selfhost/test/lexer/strings_error_unsupported_escape_sequence.out
Error at %FILE_NAME%:1:2
Unsupported escape sequence:
  |  "\z"
      ^^